<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".NearBy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/children"
            android:contentDescription="@string/vasa"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choosearea"
            android:fontFamily="cursive"
            android:textSize="30sp"
            android:textAppearance="@android:style/TextAppearance"
            />
        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dhaka"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"/>

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Chittagong"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rajshahi"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Khulna"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Barisal"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sylhet"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"/>
        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rangpur"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"/>

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mymanshing"
            android:paddingLeft="10dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"/>
    </LinearLayout>
</ScrollView>