<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Bangladesh">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bangladesh"
            android:contentDescription="@string/nameofbd"/>

        <TextView
            android:id="@+id/Ba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameofbd"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textSize="40sp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"
            android:textSize="20sp"
            android:text="@string/fullname" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/bangla"
            android:contentDescription="@string/vasa"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vasa"
            android:textSize="20sp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"
            android:text="@string/hvasa"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/banglavasa"
            android:contentDescription="@string/hvasa"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/libwar"
            android:textSize="20sp"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/children"
            android:contentDescription="@string/libwar"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tiger"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/tiger"
            android:contentDescription="@string/tiger"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mojibur"
            android:fontFamily="cursive"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="#000000"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mojibur"
            android:contentDescription="@string/mojibur"/>
    </LinearLayout>
</ScrollView>