<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button5"
        android:layout_marginBottom="208dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="cursive"
        android:text="@string/nearby"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#FFFF" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="149dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="cursive"
        android:text="@string/allplaces"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#FFFF" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="76dp"
        android:layout_marginStart="34dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="cursive"
        android:text="@string/search"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#FFFF" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button4"
        android:layout_marginBottom="18dp"
        android:background="@drawable/roundbutton"
        android:fontFamily="cursive"
        android:text="@string/abtbangladesh"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="#FFFF" />

    <android.support.v4.view.ViewPager
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />
</RelativeLayout>